
	* run-autogen.sh: Add sysconfdir argument to autogen.sh

	* src/nact/nact-gtk-utils.c (nact_gtk_utils_get_pixbuf):
	Search a pixbuf by icon theme if not found as filename or stock.

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_peek_widget): New function.

	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-icon-chooser.h:
	* src/nact/nact-icon-chooser.ui: New files.
	
	* src/nact/Makefile.am: Updated accordingly.

	* src/core/na-settings.c (content_load_keys):
	Do not warn if configuration file does not exist.

	* src/api/na-boxed.h:
	* src/api/na-data-boxed.h:
	* src/api/na-data-types.h:
	* src/core/na-boxed.c:
	* src/core/na-data-boxed.c:
	* src/core/na-data-types.c:
	Update reference documentation to deprecate NADataBoxed and NADataType
	in favor of NABoxed.

	* src/core/na-settings.c:
	* src/core/na-settings.h: Configuration monitoring.

	* src/plugin-menu/nautilus-actions.c:
	Monitor all runtime preferences with only one callback.

	* src/api/na-boxed.h:
	* src/core/na-boxed.c (na_boxed_get_pointer): New function.

	* run-autogen.sh: Add sysconfdir argument to autogen.sh.

	* src/api/na-data-types.h:
	* src/core/na-data-types.c
	(na_data_types_copy, na_data_types_free): Removed functions.

	* README-GCONF:
	* src/utils/na-gconf2key.sh.in: Fix two key label conversions.

	* src/api/na-boxed.h:
	* src/core/na-boxed.c: New files.

	* src/api/Makefile.am:
	* src/core/Makefile.am: Updated accordingly.

2011-01-10 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-data-types.h:
	* src/core/na-data-types.c
	(na_data_types_copy, na_data_types_free, na_data_types_get_label):
	New functions.

	* src/core/na-settings.c
	(monitor_io_provider_read_status, monitor_key): Register monitored keys.

	* src/core/na-settings.h
	(na_settings_get_boolean_ex, na_settings_get_string_list):
	New functions.

	* src/plugin-menu/nautilus-actions.c:
	Implement runtime preferences monitoring.
	No more use deprecated na_pivot_set_automatic_reload().
